Arreglado un error que provocaba una vista incorrecta de la pagina actual en la paginacion

--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,9 @@
 }
 
 .loading {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .header {
