--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  list-style: none;
 }
 
 .main {
@@ -24,6 +25,12 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 1.2vh;
+}
+
+@media (max-width: 443px){
+  .main {
+    padding: 10px;
+  }
 }
 
 .loading {
@@ -77,6 +84,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  
 }
 
 .navbar nav {
@@ -84,39 +92,44 @@
   justify-content: space-evenly;
   gap: 20px;
   margin-top: 2px;
-  width: 50%;
+  width: 80%;
+  max-width: 450px;
   box-shadow: 0 2.5px 2.5px rgba(128, 0, 128, 0.623), 0 3px 3px rgb(184, 182, 182);
   border-radius: 10%;
 }
 
-.navbar button {
+.navbar .button {
+  all: unset;
+  font-weight: 600;
+  font-family: inherit;
+  color: whitesmoke;
   background-color: transparent;
   border: 0;
   font-size: 1.05rem;
   transition: border .5s ease,;
   position: relative;
   cursor: pointer;
-  padding: 5px;
+  padding: 2px;
   margin: 2px 0;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
 }
 
-.navbar button::before {
+.navbar .button::before {
   content: "";
   position: absolute;
   background-color: #2c4ec0;
   bottom: 0;
   left: 0;
   width: 0;
-  height:11%;
+  height:10%;
   transition: width .5s ease;
 }
 
-.navbar button.active::before {
+.navbar .button.active::before {
   width: 100%;
 }
 
-.navbar button::after {
+.navbar .button::after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -127,7 +140,7 @@
   z-index: -1;
 }
 
-.navbar button:hover::after {
+.navbar .button:hover::after {
   height: 10%;
   background-color: #d6d4d4 ;
 }
