--- a/src/styles/animes.css
+++ b/src/styles/animes.css
@@ -1,64 +1,80 @@
 .animeContainer {
-    margin-top: 0px;
-    padding: 1%;
-    padding-top: 0;
-    
+  margin-top: 0px;
+  padding: 1%;
+  padding-top: 0;
+
 }
 
 .list {
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 15px;
-    margin-bottom: 3%;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 15px;
+  margin-bottom: 3%;
+}
+
+@media (max-width: 443px) {
+  .list {
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  }
 }
 
 .anime {
-    background-color: rgb(26, 25, 25);
-    padding: 5%;
-    border-radius: 1px;
-    transition: transform .5s ease;
+  background-color: rgb(26, 25, 25);
+  padding: 5%;
+  border-radius: 1px;
+  transition: transform .5s ease;
 }
 
 .anime:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.anime p {
+  font-size: clamp(14.8px, 2vw, 17px)
 }
 
 .header-anime img {
-    width: 100%;
-    aspect-ratio: 1/1.4;
+  width: 100%;
+  aspect-ratio: 1/1.4;
 }
 
 .header-anime h3 {
 
-    font-weight: bold;
-    margin-bottom: 4px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 4px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 1rem;
 }
 
 .heart {
-    position: absolute;
-    color: rgba(245, 245, 245, 0.705);
-    font-size: 1.4rem;
-    top: 2%;
-    right: 2%;
-    cursor: pointer;
-    transition: .5s ease;
+  position: absolute;
+  color: rgba(245, 245, 245, 0.705);
+  filter: drop-shadow(0 0 2px black);
+  font-size: 1.4rem;
+  top: 2%;
+  right: 2%;
+  cursor: pointer;
+  transition: .5s ease;
 }
 
 .heart.active {
-    color: rgba(255, 0, 0, 0.726);
+  color: rgba(255, 0, 0, 0.726);
+  filter: drop-shadow(0 0 2px black)
 }
 
 .heart:hover {
-    color: rgba(245, 245, 245, 0.425);
+  transform: translateY(-2px);
+  filter: drop-shadow(0 0 4px black);
 }
 
 .heart.active:hover {
-    color: rgba(255, 0, 0, 0.493);
+  transform: translateY(-2px);
+  color: rgba(255, 0, 0, 0.822);
+  filter: drop-shadow(0 0 4px black);
+  
 }
 
 .heart.pop {
@@ -66,73 +82,150 @@
 }
 
 @keyframes pop {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.5); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.5);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
 
-
-
 .score {
-    position: absolute;
-    bottom: 1%;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.473);
-    padding: 2%;
-    font-size: 1.15rem;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-weight: 500;
-    text-align: center;
+  position: absolute;
+  bottom: 1%;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.473);
+  padding: 2%;
+  font-size: 1.15rem;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: 500;
+  text-align: center;
 }
 
 /*	Pafination
 =========================================== */
 
-.pagination{
-    margin: 5px auto;
-    display: flex;
-    gap: 4px;
-    width: 95%;
-    overflow-x: auto;
-    max-width: 800px;
-    scroll-behavior: smooth;
-    white-space: nowrap;
+.pagination {
+  margin: 5px auto;
+  display: flex;
+  gap: 4px;
+  width: 95%;
+  justify-content: center;
+  overflow-x: auto;
+  max-width: 800px;
+  scroll-behavior: smooth;
+  white-space: nowrap;
 }
 
 .pagination div {
-    cursor: pointer;
-    text-align: center;
-    flex: 1 0;
-    user-select: none;
-    padding: 2px 6px;
-    background-color: rgba(128, 0, 128, 0.5);
+  cursor: pointer;
+  text-align: center;
+  flex: 1 0;
+  max-width: 80px;
+  user-select: none;
+  padding: 2px 6px;
+  background-color: rgba(128, 0, 128, 0.5);
 }
 
 .pagination div.active {
-    background-color: rgba(0, 0, 0, 0.473);
+  background-color: rgba(0, 0, 0, 0.473);
 }
 
 .pagination div:hover {
-    background-color: rgba(128, 0, 128, 0.8);
+  background-color: rgba(128, 0, 128, 0.8);
 }
 
 .pagination button {
-    
-    cursor: pointer;
-    background-color:  rgba(128, 0, 128, 0.5);
-    border: none;
-    color: whitesmoke;
-    padding: 5px 6px 5px 10px;
-    border-radius: 100% 25% 25% 100%;
-    
+
+  cursor: pointer;
+  background-color: rgba(128, 0, 128, 0.5);
+  border: none;
+  color: whitesmoke;
+  padding: 5px 6px 5px 10px;
+  border-radius: 100% 25% 25% 100%;
+
 }
 
-.pagination button ~ button {
-    border-radius: 25% 100% 100% 25%;
-    padding: 5px 10px 5px 6px;
-    
+.pagination button~button {
+  border-radius: 25% 100% 100% 25%;
+  padding: 5px 10px 5px 6px;
+
 }
 
-.pagination button:hover{
-    background-color: rgba(128, 0, 128, 0.8);
+.pagination button:hover {
+  background-color: rgba(128, 0, 128, 0.8);
+}
+
+/*	SweetAlert2
+=========================================== */
+
+.my-swal-popup {
+  font-family: 'Poppins', sans-serif;
+  background: #2e2c2d;
+  border: 2px solid #0f3bcc;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.my-swal-title {
+  font-size: 15px;
+  color: whitesmoke;
+  font-weight: 500;
+}
+
+.swal-anime {
+  display: -webkit-box;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  /* Número máximo de líneas */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  font-weight: bold;
+}
+
+.swal2-custom-icon{
+  transform: scale(0.6);
+  margin: 0 auto -5% auto;
+}
+
+.my-swal-container {
+  font-size: 14px;
+  color: #333;
+}
+
+/* Animación personalizada */
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeOutRight {
+  from {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  to {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+}
+
+.swal2-show-custom {
+  animation: fadeInRight 0.4s ease-out;
+}
+
+.swal2-hide-custom {
+  animation: fadeOutRight 0.4s ease-in;
 }
