--- a/src/styles/animes.css
+++ b/src/styles/animes.css
@@ -22,12 +22,18 @@
 .anime {
   background-color: rgb(26, 25, 25);
   padding: 5%;
-  border-radius: 1px;
+  border-radius: 2px;
   transition: transform .5s ease;
 }
 
 .anime:hover {
   transform: scale(1.1);
+}
+
+@media (max-width: 568px){
+  .anime:hover {
+    transform: scale(1.05);
+  }
 }
 
 .anime p {
@@ -97,13 +103,13 @@
 
 .score {
   position: absolute;
-  bottom: 1%;
-  left: 0;
+  bottom: 2%;
+  left: .1%;
   background-color: rgba(0, 0, 0, 0.473);
   padding: 2%;
-  font-size: 1.15rem;
+  font-size: 1.3rem;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-weight: 500;
+  font-weight: 600;
   text-align: center;
 }
 
